// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Namespace event handlers A Namespace is archived 1`] = `
Array [
  Array [
    Object {
      "text": "
        UPDATE namespace
          SET
            archived = true
          WHERE id = 9
          RETURNING *;
      ",
    },
  ],
]
`;

exports[`Namespace event handlers A Namespace is archived 2`] = `204`;

exports[`Namespace event handlers A Namespace is archived 3`] = `undefined`;

exports[`Namespace event handlers A Namespace is created 1`] = `
Array [
  Array [
    Object {
      "text": "
        INSERT INTO namespace
          (name, profile_id)
          VALUES ($1, $2) RETURNING *;",
      "values": Array [
        "4ea35c-test",
        1,
      ],
    },
  ],
]
`;

exports[`Namespace event handlers A Namespace is created 2`] = `201`;

exports[`Namespace event handlers A Namespace is created 3`] = `
Object {
  "clusterId": 1,
  "createdAt": Any<Date>,
  "id": Any<Number>,
  "name": "4ea35c-test",
  "updatedAt": Any<Date>,
}
`;

exports[`Namespace event handlers A Namespace is updated 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM namespace
          WHERE id = $1 AND archived = false;",
      "values": Array [
        1,
      ],
    },
  ],
  Array [
    Object {
      "text": "
        UPDATE namespace
          SET
            name = $1, profile_id = $2, cluster_id = $3
          WHERE id = 1
          RETURNING *;",
      "values": Array [
        "4ea35c-test",
        1,
        1,
      ],
    },
  ],
]
`;

exports[`Namespace event handlers A Namespace is updated 2`] = `204`;

exports[`Namespace event handlers A Namespace is updated 3`] = `undefined`;

exports[`Namespace event handlers A project fails to archive 1`] = `
Array [
  Array [
    Object {
      "text": "
        UPDATE namespace
          SET
            archived = true
          WHERE id = undefined
          RETURNING *;
      ",
    },
  ],
]
`;

exports[`Namespace event handlers A project fails to archive 2`] = `200`;

exports[`Namespace event handlers A single Namespace is returned 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM namespace
          WHERE id = $1 AND archived = false;",
      "values": Array [
        13,
      ],
    },
  ],
]
`;

exports[`Namespace event handlers A single Namespace is returned 2`] = `200`;

exports[`Namespace event handlers A single Namespace is returned 3`] = `
Object {
  "archived": false,
  "clusterId": 1,
  "createdAt": "2020-05-06T21:16:42.799Z",
  "id": 13,
  "name": "4ea35c-tools",
  "profileId": 4,
  "updatedAt": "2020-05-06T21:16:42.799Z",
}
`;

exports[`Namespace event handlers All Namespaces are returned 1`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT namespace.id AS \\"namespaceId\\", namespace.name,
        coalesce(
          (
            SELECT array_to_json(array_agg(row_to_json(x)))
            FROM (
              SELECT ref_cluster.id AS \\"clusterId\\", ref_cluster.name, cluster_namespace.provisioned
              FROM ref_cluster JOIN cluster_namespace ON ref_cluster.id = cluster_namespace.cluster_id
              WHERE namespace.id = cluster_namespace.namespace_id
            ) x
          ),
          '[]'
        ) AS clusters
        FROM namespace WHERE namespace.profile_id = $1;
      ",
      "values": Array [
        4,
      ],
    },
  ],
]
`;

exports[`Namespace event handlers All Namespaces are returned 2`] = `200`;

exports[`Namespace event handlers All Namespaces are returned 3`] = `
Array [
  Object {
    "clusters": Array [
      Object {
        "clusterId": 1,
        "name": "silver",
        "provisioned": false,
      },
    ],
    "name": "4ea35c-tools",
    "namespaceId": 13,
  },
  Object {
    "clusters": Array [
      Object {
        "clusterId": 1,
        "name": "silver",
        "provisioned": false,
      },
    ],
    "name": "4ea35c-test",
    "namespaceId": 14,
  },
  Object {
    "clusters": Array [
      Object {
        "clusterId": 1,
        "name": "silver",
        "provisioned": false,
      },
    ],
    "name": "4ea35c-dev",
    "namespaceId": 15,
  },
  Object {
    "clusters": Array [
      Object {
        "clusterId": 1,
        "name": "silver",
        "provisioned": false,
      },
    ],
    "name": "4ea35c-prod",
    "namespaceId": 16,
  },
]
`;

exports[`Namespace event handlers Fetch all Namespaces should throw 1`] = `"Unable fetch namespace for profile ID undefined"`;

exports[`Namespace event handlers Fetch all Namespaces should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT namespace.id AS \\"namespaceId\\", namespace.name,
        coalesce(
          (
            SELECT array_to_json(array_agg(row_to_json(x)))
            FROM (
              SELECT ref_cluster.id AS \\"clusterId\\", ref_cluster.name, cluster_namespace.provisioned
              FROM ref_cluster JOIN cluster_namespace ON ref_cluster.id = cluster_namespace.cluster_id
              WHERE namespace.id = cluster_namespace.namespace_id
            ) x
          ),
          '[]'
        ) AS clusters
        FROM namespace WHERE namespace.profile_id = $1;
      ",
      "values": Array [
        NaN,
      ],
    },
  ],
]
`;

exports[`Namespace event handlers Fetch single profile should throw 1`] = `"Unable fetch namespace with ID undefined"`;

exports[`Namespace event handlers Fetch single profile should throw 2`] = `
Array [
  Array [
    Object {
      "text": "
        SELECT * FROM namespace
          WHERE id = $1 AND archived = false;",
      "values": Array [
        NaN,
      ],
    },
  ],
]
`;
